# file_analysis_mcp

./: README.md  main.py  pyproject.toml
src/file_analysis_mcp/: __init__.py  server.py
