
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "file-analysis-mcp"
version = "0.1.0"
authors = [
  { name="VARUN SAI", email="varunsai.srinivas@gmail.com" },
]
description = "MCP server for text file analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "fastmcp>=0.1.0",
]

[project.urls]
github = "https://github.com/varunidealabs/file_analysis_mcp.git"

[project.scripts]
mcp-file-analysis = "file_analysis_mcp:run"
